# AgentPulse

./: .gitignore  .vscodeignore  .vscodeignore.darwin-arm64  .vscodeignore.darwin-x64  .vscodeignore.linux-arm64  .vscodeignore.linux-x64  .vscodeignore.win32-x64  CHANGELOG.md  LICENSE  README.es.md  README.fr.md  README.md  README.ru.md  README.zh-CN.md  esbuild.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: package-platforms.yml
config/vsce/: darwin-arm64.ignore  darwin-x64.ignore  linux-arm64.ignore  linux-x64.ignore  win32-x64.ignore
docs/language/: README.es.md  README.fr.md  README.ru.md  README.zh-CN.md
docs/releases/: v2.0.0.md
scripts/: build-native-helper.cjs  claude-hook.cjs  codex-hook.cjs  verify-native-helper.cjs
src/: extension.ts  types.ts
src/agents/: agentManager.ts  agentSession.ts  agentState.ts  index.ts
src/core/: agentManager.ts  config.ts  eventBus.ts  eventDeduplicator.ts  eventFormatter.ts  events.ts  lifecycle.ts  logger.ts  notificationRouter.ts
src/detectors/: detectorFactory.ts  detectorManager.ts  mockDetector.ts
src/hooks/: claudeEventMapper.ts  claudeHookInstaller.ts  claudeHookTypes.ts  codexHookInstaller.ts  signalPaths.ts  signalTypes.ts  signalWatcher.ts  signalWriter.ts
src/notifications/: fallbackNotifier.ts  linuxNotifier.ts  macosNotifier.ts  mockNotifier.ts  nativeHelperNotifier.ts  notificationService.ts  notifierManager.ts  platformNotifierFactory.ts  vscodeNotifier.ts  windowsAumid.ts  (+1 more)
tools/AgentPulse.NativeHelper/: Cargo.toml
tools/AgentPulse.NativeHelper/src/: main.rs
(+10 files in other folders)
